--- a/views/index.ejs
+++ b/views/index.ejs
@@ -244,54 +244,29 @@
     </section>
     <section id="contact">
       <div class="contact container">
-        <form action="https://formspree.io/f/xzbowpjq" method="POST">
-          <div class="form">
-            <div class="form-txt">
-              <h4>We’d Love to Hear From You!</h4>
-              <h1>Contact Us</h1>
-              <span
-                >Planning an event or have questions? We're here to help!</span
-              >
-              <lottie-player
-                src="https://lottie.host/6011eae3-c77d-4b36-b69f-3df11b8d0e9d/PZ41zRAJks.json"
-                background="##FFFFFF"
-                speed="1"
-                style="margin-left: 50px; width: 300px; height: 300px"
-                loop
-                autoplay
-                direction="1"
-                mode="normal"
-              ></lottie-player>
-            </div>
-            <div class="form-details">
-              <input
-                type="text"
-                name="name"
-                id="name"
-                placeholder="Name"
-                required
-              />
-              <input
-                type="email"
-                name="email"
-                id="email"
-                placeholder="Email"
-                required
-              />
-              <textarea
-                name="message"
-                id="message"
-                cols="52"
-                rows="7"
-                placeholder="Message"
-                required
-              ></textarea>
-              <button>SEND MESSAGE</button>
-            </div>
-          </div>
-        </form>
+          <form id="contact-form">
+              <div class="form">
+                  <div class="form-txt">
+                      <h4>We’d Love to Hear From You!</h4>
+                      <h1>Contact Us</h1>
+                      <span>Planning an event or have questions? We're here to help!</span>
+                      <lottie-player src="https://lottie.host/6011eae3-c77d-4b36-b69f-3df11b8d0e9d/PZ41zRAJks.json" 
+                                     background="##FFFFFF" 
+                                     speed="1" 
+                                     style="margin-left: 50px; width: 300px; height: 300px" 
+                                     loop autoplay direction="1" mode="normal">
+                      </lottie-player>
+                  </div>
+                  <div class="form-details">
+                      <input type="text" name="user_name" id="name" placeholder="Name" required>
+                      <input type="email" name="user_email" id="email" placeholder="Email" required>
+                      <textarea name="message" id="message" cols="52" rows="7" placeholder="Message" required></textarea>
+                      <button type="submit">SEND MESSAGE</button>
+                  </div>
+              </div>
+          </form>
       </div>
-    </section>
+  </section>
     <footer>
       <div class="footer-container container">
         <div class="content_1">
