--- a/views/services/bookingUser.ejs
+++ b/views/services/bookingUser.ejs
@@ -4,23 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= serviceType %> Details</title>
-    <link rel="stylesheet" href="/stylesheets/index.css" />
+    <link rel="stylesheet" href="/stylesheets/book.css" />
   </head>
-  <style>
-    .btn-book {
-      background-color: #007bff;
-      color: #fff;
-      padding: 8px 16px;
-      border: none;
-      border-radius: 5px;
-      text-decoration: none;
-      display: inline-block;
-      cursor: pointer;
-    }
-    .input-field {
-      margin-bottom: 15px;
-    }
-  </style>
   <body>
     <h1><%= serviceType %> Details</h1>
     <div class="service-details">
